fix for collapsing to icon on anchorbutton

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -103,7 +103,7 @@
 
   @media #{$media-small-minus} {
     &.collapse {
-      em > span {
+      span, em > span {
         display: none;
       }
       svg {
